@@ -303,6 +303,75 @@
         </dependency>
       </dependencies>
     </profile>
+    <profile>
+      <id>dist</id>
+      <build>
+        <plugins>
+
+          <plugin>
+            <artifactId>jdeb</artifactId>
+            <groupId>org.vafer</groupId>
+            <version>1.0</version>
+
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>jdeb</goal>
+                </goals>
+                <configuration>
+                  <dataSet>
+
+                    <data>
+                      <src>${project.build.directory}/${project.build.finalName}.jar</src>
+                      <type>file</type>
+                      <mapper>
+                        <type>perm</type>
+                        <prefix>/usr/share/jolokia</prefix>
+                        <filemode>644</filemode>
+                      </mapper>
+                    </data>
+
+                    <data>
+                      <type>link</type>
+                      <symlink>true</symlink>
+                      <linkName>/usr/share/jolokia/jolokia-jvm.jar</linkName>
+                      <linkTarget>/usr/share/jolokia/${project.build.finalName}.jar</linkTarget>
+                    </data>
+
+                  </dataSet>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>java9+</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                <compilerArgs>
+                  <arg>--add-modules=jdk.attach</arg>
+                </compilerArgs>
+                <source>9</source>
+                <target>9</target>
+                <testSource>9</testSource>
+                <testTarget>9</testTarget>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
   </profiles>
 
 </project>
